--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <p class="text"><H1> small web site for download files on old system</H1></p>
+<a href="https://github.com/marhau-dev/python-2.5-modules/releases/download/V1/requests-0.8.8.tar.zip"><p>requests</p></a>
 
 
-<styles
+<styles>
   text {
   color = red
   
   }
-  
-  >
 
   
 </styles>
