--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <a href="https://github.com/marhau-dev/python-2.5-modules/releases/download/V1/requests-0.8.8.tar.zip"><p>requests</p></a>
 
 
-<styles>
+<styles
   H1 {color: red}
-
+>
   
 </styles>
