--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <a href="https://github.com/marhau-dev/python-2.5-modules/releases/download/V1/requests-0.8.8.tar.zip"><p>sts</p></a>
 <a href="https://files.pythonhosted.org/packages/ba/c3/4e1f892f41aaa217fe0d1f827fa05928783349c69f3cc06fdd68e112678a/pip-1.2.tar.gz">pip</a>
 
-<styles
+<styles>
 
-H1{color: red}
+h1 {
+  color: red
 
->
+
+}
+
+
 
 
   
