--- a/index.html
+++ b/index.html
@@ -2,16 +2,8 @@
 <a href="https://github.com/marhau-dev/python-2.5-modules/releases/download/V1/requests-0.8.8.tar.zip"><p>sts</p></a>
 <a href="https://files.pythonhosted.org/packages/ba/c3/4e1f892f41aaa217fe0d1f827fa05928783349c69f3cc06fdd68e112678a/pip-1.2.tar.gz">pip</a>
 
-<styles>
-
-h1 {
-  color: red;
-
-
-}
-
-
-
-
-  
-</styles>
+<style>
+  body {background-image: "https://assets.rawpixel.com/cover_png_400/Y29sbGVjdGlvbi9jb3Zlci9zY3JlZW5fc2hvdF8yMDE3LTA5LTE0X2F0XzMuMTQuMTBfcG0ucG5n.png";}
+  h1   {color: blue;}
+  p    {color: red;}
+  </style>
