--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p class="text"><H1> small web site for download files on old system</H1></p>
 <a href="https://github.com/marhau-dev/python-2.5-modules/releases/download/V1/requests-0.8.8.tar.zip"><p>sts</p></a>
-<a href="https://files.pythonhosted.org/packages/ba/c3/4e1f892f41aaa217fe0d1f827fa05928783349c69f3cc06fdd68e112678a/pip-1.2.tar.gz">pip</a>
+<a id="button" href="https://files.pythonhosted.org/packages/ba/c3/4e1f892f41aaa217fe0d1f827fa05928783349c69f3cc06fdd68e112678a/pip-1.2.tar.gz">pip</a>
 
 <style>
   body {background-image: "https://assets.rawpixel.com/cover_png_400/Y29sbGVjdGlvbi9jb3Zlci9zY3JlZW5fc2hvdF8yMDE3LTA5LTE0X2F0XzMuMTQuMTBfcG0ucG5n.png";}
@@ -14,5 +14,16 @@
     color: lightgrey;
 
   } 
-  p    {color: red;}
+  p {color: black;
+    
+  
+  
+  }
+  p:hover{
+    color: grey;
+    font: bold;
+
+
+  }
+
   </style>
