--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   body {background-image: "https://assets.rawpixel.com/cover_png_400/Y29sbGVjdGlvbi9jb3Zlci9zY3JlZW5fc2hvdF8yMDE3LTA5LTE0X2F0XzMuMTQuMTBfcG0ucG5n.png";}
   h1   {color: blue;}
   button {
-    color: gray;
-
+    color: black;
+    background-color: lightgray;
 
   }
   button:hover{
-    color: lightgrey;
-
+    color: white;
+    background-color: grey;
   } 
   p {color: black;
     
