--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   button {
     color: black;
     background-color: lightgray;
-
+    text-decoration: none;
+    text-align: left;
   }
   button:hover{
     color: white;
     background-color: grey;
+    text-decoration: none;
+    text-align: left;
   } 
   p {color: black;
     
