--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     color: black;
     background-color: lightgray;
     text-decoration: none;
+    text-underline-offset:unset;
     text-align: left;
   }
   button:hover{
