--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html>
 <body>
-  <p class="text"><H1> small web site for download files on old system</H1></p>
+  <p class="text"><H1>Test website</H1></p>
   <a href="https://github.com/marhau-dev/python-2.5-modules/releases/download/V1/requests-0.8.8.tar.zip"><p class="button" id="button" >requests</p></a>
   <a  href="https://files.pythonhosted.org/packages/ba/c3/4e1f892f41aaa217fe0d1f827fa05928783349c69f3cc06fdd68e112678a/pip-1.2.tar.gz">pip</a>
   <a  href="https://github.com/marhau-dev/python-2.5-modules/releases/download/V1/com.spotify.client-iOS6.0-.Clutch-2.0.4.ipa">ios</a>
-  <dev class="im1" id="im1"></dev>
+  <dev class="im1" id="im1" ></dev>
+  <img class="im1" id="im1" alt="Gif"><img>
   <style>
     body {background-image: "https://assets.rawpixel.com/cover_png_400/Y29sbGVjdGlvbi9jb3Zlci9zY3JlZW5fc2hvdF8yMDE3LTA5LTE0X2F0XzMuMTQuMTBfcG0ucG5n.png";}
     h1   {color: blue;}
+    h1:hover {color: lightblue;
+    }
     button {
       color: black;
       background-color: lightgray;
