--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <a  href="https://files.pythonhosted.org/packages/ba/c3/4e1f892f41aaa217fe0d1f827fa05928783349c69f3cc06fdd68e112678a/pip-1.2.tar.gz">pip</a>
   <a  href="https://github.com/marhau-dev/python-2.5-modules/releases/download/V1/com.spotify.client-iOS6.0-.Clutch-2.0.4.ipa">ios</a>
   <dev class="im1" id="im1" ></dev>
-  <img class="im1" id="im1" alt="Gif"><img>
+  <p>
+  <img class="im1" id="im1" alt="Gif" h><img>
+  </p>
   <style>
-    body {background-image: "https://assets.rawpixel.com/cover_png_400/Y29sbGVjdGlvbi9jb3Zlci9zY3JlZW5fc2hvdF8yMDE3LTA5LTE0X2F0XzMuMTQuMTBfcG0ucG5n.png";}
+    body {background-image: url("https://assets.rawpixel.com/cover_png_400/Y29sbGVjdGlvbi9jb3Zlci9zY3JlZW5fc2hvdF8yMDE3LTA5LTE0X2F0XzMuMTQuMTBfcG0ucG5n.png");}
     h1   {color: blue;}
     h1:hover {color: lightblue;
     }
@@ -28,7 +30,7 @@
     p {color: black;
       
     im1 {
-        background-image: "https://drive.google.com/file/d/1NqmKeYp2Z_XqzI7T0NrZ1mUKmFA-bT5a/view?usp=sharing";
+        background-image: url("https://drive.google.com/file/d/1NqmKeYp2Z_XqzI7T0NrZ1mUKmFA-bT5a/view?usp=sharing");
         width: 400px;
         height: 400px;
     }
