--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     p {color: black;
       
     im1 {
-        background-image: url("https://drive.google.com/file/d/1NqmKeYp2Z_XqzI7T0NrZ1mUKmFA-bT5a/view?usp=sharing");
+        background-image: url("https://drive.google.com/uc?export=download&id=1NqmKeYp2Z_XqzI7T0NrZ1mUKmFA-bT5a");
         width: 400px;
         height: 400px;
     }
