--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <img class="im1" id="im1" alt="Gif" h><img>
   </p>
   <style>
-    body {background-image: url("https://assets.rawpixel.com/cover_png_400/Y29sbGVjdGlvbi9jb3Zlci9zY3JlZW5fc2hvdF8yMDE3LTA5LTE0X2F0XzMuMTQuMTBfcG0ucG5n.png");}
+    body {background-image: url("https://assets.rawpixel.com/cover_png_400/Y29sbGVjdGlvbi9jb3Zlci9zY3JlZW5fc2hvdF8yMDE3LTA5LTE0X2F0XzMuMTQuMTBfcG0ucG5n.png");
+    background-repeat: no-repeat;
+  }
     h1   {color: blue;}
     h1:hover {color: lightblue;
     }
