--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     p {color: black;
       
     im1 {
-        background-image: url("https://drive.google.com/uc?export=download&id=1NqmKeYp2Z_XqzI7T0NrZ1mUKmFA-bT5a");
+        background-image: "1.gif";
         width: 400px;
         height: 400px;
     }
