--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
       
     im1 {
         border-radius: 20%;
-        width: 400px;
-        height: 400px;
+        width: 128px;
+        height: 128px;
+        align-self: center;
     }
     
     }
