--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <a  href="https://github.com/marhau-dev/python-2.5-modules/releases/download/V1/com.spotify.client-iOS6.0-.Clutch-2.0.4.ipa">ios</a>
   <dev class="im1" id="im1" ></dev>
   <p>
-  <img class="image1" id="im1" alt="Gif" src="1.gif"><img>
+  <img class="image1" id="image1" alt="Gif" src="1.gif"><img>
   </p>
   <style>
     body {  background: linear-gradient(cyan,pink); }
