--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <a  href="https://files.pythonhosted.org/packages/ba/c3/4e1f892f41aaa217fe0d1f827fa05928783349c69f3cc06fdd68e112678a/pip-1.2.tar.gz">pip</a>
   <a  href="https://github.com/marhau-dev/python-2.5-modules/releases/download/V1/com.spotify.client-iOS6.0-.Clutch-2.0.4.ipa">ios</a>
   <dev class="im1" id="im1" ></dev>
-  <p>
-  <img class="image1" id="image1" alt="Gif" src="1.gif"><img>
-  </p>
+  <p class="image1" id="image1"><img class="image1" id="image1" alt="Gif" src="1.gif"><img></p>
   <style>
     body {  background: linear-gradient(cyan,pink); }
     h1   {color: blue;}
