--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     } 
     p {color: black;
       
-    image1{
+    .image1{
         border-radius: 20%;
         width: 128px;
         height: 128px;
