--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     h1   {color: blue;}
     h1:hover {color: lightblue;
     }
-    button {
+    .button {
       color: black;
       background: radial-gradient(pink,cyan);
       text-decoration: none;
@@ -22,7 +22,7 @@
       
     }
 
-    button:hover{
+    .button:hover{
       color: black;
       background: radial-gradient(cyan,pink);
       text-decoration: none;
