--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
+
+<title class="titles" id="titles">small web site</title>
 <body>
+
   <p class="text"><H1>Test website</H1></p>
   <a href="https://github.com/marhau-dev/python-2.5-modules/releases/download/V1/requests-0.8.8.tar.zip"><p class="button" id="button" >requests</p></a>
   <a  href="https://files.pythonhosted.org/packages/ba/c3/4e1f892f41aaa217fe0d1f827fa05928783349c69f3cc06fdd68e112678a/pip-1.2.tar.gz">pip</a>
@@ -55,7 +58,13 @@
   
   
     }
-  
+    .titles{
+      color: darkgray;
+
+    }
+
+
+
     </style>
 </body>
 
