--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       text-decoration: none;
       text-underline-offset:unset;
       text-align: center;
+      width: 100px;
+      height: 50px;
       border-radius: 20%;
       border-color: black;
       
@@ -32,6 +34,8 @@
       text-underline-offset:unset;
       text-align: center;
       border-radius: 18%;
+      width: 128px;
+      height: 60px;
       border-color: black;
     } 
     p {color: black;
