--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       text-decoration: none;
       text-underline-offset:unset;
       text-align: center;
+      align-content: center;
       width: 100px;
       height: 50px;
       border-radius: 20%;
@@ -31,6 +32,7 @@
       color: black;
       background: radial-gradient(cyan,pink);
       text-decoration: none;
+      align-content: center;
       text-underline-offset:unset;
       text-align: center;
       border-radius: 18%;
