--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
     }
 
 
+    @media screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+            body {
+                background-color: lightblue;
+          
+            }
+            .button{
+              border: 1px;
+              background-color: azure;
+            }
+          }
+
+
 
     </style>
 </body>
