--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<title class="titles" id="titles">small web site</title>
+<title class="titles" id="titles">small web site :D</title>
 <body>
 
   <p class="text"><H1>Test website</H1></p>
