--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  
  <style>
 
-    body {  background: linear-gradient(cyan,pink); }
+    body {  background-image: url("back.png"); }
     h1   {color: blue;
       width: auto;
       height: auto;
