--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title class="titles" id="titles">IOS 6 Tools</title>
 <body>
   <center>
-  <p class="text"><H1>Ios 6 tools</H1></p>
+  <p class="text"><H1>IOS 6 Tools</H1></p>
   <p class="hide" id="hide" >Please use your ios 6 device</p>
 
   <a href="https://github.com/marhau-dev/python-2.5-modules/releases/download/V1/requests-0.8.8.tar.zip"><p class="button" id="button" >REQUESTS</p></a>
@@ -16,10 +16,12 @@
  
  <style>
 
-    body {  background-image: url("back.png"); }
-    h1   {color: blue;
+    body.pinstripe {
+    background: url('data:image/png; base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAABCAIAAACdaSOZAAAAFElEQVQIHWM4euYKErp0+tINIAIAuHQQ4rDrv5YAAAAASUVORK5CYII=')}; 
+    h1   {color: gray;
       width: auto;
       height: auto;
+      font-family:Verdana, Geneva, Tahoma, sans-serif;
       }
 
 
@@ -110,22 +112,21 @@
             }
             .button{
               border: 1px;
-              background-color: azure;
-              height: 20px;
-              width:30px;
+              background: linear-gradient(#E0E0E0,#757575);
+              height: auto;
+              width:auto;
 
             }
             h1{
               text-decoration:wavy;
-            }
-            .image1{
-              width: 320px;
-              height: 480px;
-              align-self: center;
+              
             }
             .hide{
               display: none;
-              
+
+            }
+            .image1{
+              display: none;
             }
 
 
