--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
               align-content: center;
               width: 17%;
               height: auto;
+              border-radius: 2%;
             }
 
   
