--- a/index.html
+++ b/index.html
@@ -103,12 +103,14 @@
 
             .button{
               border: 1px;
-              text-size-adjust:50%;
+              size-adjust: 100%;
               background-image: url("button-ios6.png");
+              background-origin: border-box;
+              background-position: 300px;
               text-align: center;
               align-content: center;
-              width: 17%;
-              height: auto;
+              width: 300px;
+              height: 100px;
               border-radius: 2%;
             }
 
