--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
             .button{
               border: 1px;
+              text-size-adjust: 100%;
               size-adjust: 100%;
               background-image: url("button-ios6.png");
               background-origin: border-box;
