--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
             .button{
               border: 1px;
+              font-size: 200px;
               text-size-adjust: 100%;
               size-adjust: 100%;
               background-image: url("button-ios6.png");
