--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     }
 
     @keyframes rot{
-      10% {color: yellow; transform: rotate(36);}
-      20% {color: yellow; transform: rotate(72);}
-      30% {color: yellow; transform: rotate(108);}
-      40% {color: yellow; transform: rotate(144);}
-      50% {color: yellow; transform: rotate(144);}
-      60% {color: yellow; transform: rotate(180);}
-      70% {color: yellow; transform: rotate(216);}
-      80% {color: yellow; transform: rotate(252);}
-      90% {color: yellow; transform: rotate(288);}
-      100% {color: yellow; transform: rotate(324);}
+      10% {color: yellow; transform: rotate(36deg);}
+      20% {color: orange; transform: rotate(72deg);}
+      30% {color: red; transform: rotate(108deg);}
+      40% {color:  green; transform: rotate(144deg);}
+      50% {color: lightgreen; transform: rotate(144deg);}
+      60% {color: blue; transform: rotate(180deg);}
+      70% {color: lightblue; transform: rotate(216deg);}
+      80% {color: purple; transform: rotate(252deg);}
+      90% {color: lightpink; transform: rotate(288deg);}
+      100% {color: lightyellow; transform: rotate(324deg);}
     }
 
 
