--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <p class="rotates"  id="rotates">rotate 360 fun</p>
   <a href="https://cydia.invoxiplaygames.uk/certificates/ISRG2.pem";><p class="button" id="button" >IOS 6 certificate</p></a>
+   <p><img class="rotates" src="1.gif"></img></p>
   </center>
 
 </body>
