--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <p class="text"><H1>IOS 6 Tools</H1></p>
   <p class="hide" id="hide" >Please use your ios 6 device</p>
 
-  <p class="rotates"  id="rotates">rotate 360 fun</p>
   <a href="https://cydia.invoxiplaygames.uk/certificates/ISRG2.pem";><p class="button" id="button" >IOS 6 certificate</p></a>
-   <p><img class="rotates" src="1.gif"></img></p>
+   <p><img class="rotatespic" src="1.gif"></img></p>
   </center>
 
 </body>
@@ -16,13 +15,32 @@
  <style>
 
 
-    .rotates{
+
+
+
+    .rotatespic{
       color:aqua;
-      animation: rot 2s infinite;
       width: 300;
       height: 300;
 
     }
+
+
+
+    .rotatespic:hover{
+      color:aqua;
+      animation: rot 2s infinite;
+
+
+    }
+
+
+
+
+
+
+
+
 
     @keyframes rot{
       10% {color: yellow; transform: rotate(36deg);}
@@ -123,6 +141,10 @@
                 background-size: 110%;
             }
 
+            .rotatespic{
+              display: none;
+
+            }
 
 
 
