--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <title class="titles" id="titles">IOS 6 Tools</title>
 <body class="pinstripe">
   <center>
-  <p class="text"><H1>IOS 6 Tools</H1></p>
+  
   <p class="hide" id="hide" >Please use your ios 6 device</p>
-
-  <a href="https://cydia.invoxiplaygames.uk/certificates/ISRG2.pem";><p class="button" id="button" >IOS 6 certificate</p></a>
+<div class="shape1">
+  <p class="text"><H1>IOS 6 Tools</H1></p>
+ 
+</div>
+<a href="https://cydia.invoxiplaygames.uk/certificates/ISRG2.pem";><p class="button" id="button" >IOS 6 certificate</p></a>
+  
    <p><img class="rotatespic" src="1.gif"></img></p>
   </center>
 
@@ -14,7 +18,17 @@
  
  <style>
 
+     .shape1{  
+        background-color: whitesmoke;
+        border-radius: 2%;
+        border-color: black;
+        border-width: 0.50px;
+        width: 200;
+        height: auto;
 
+
+
+}
 
 
 
