--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
  <style>
 
      .shape1{  
-        background-color: whitesmoke;
-        border-radius: 2%;
+        background-color: #f2efef;
+        border-radius: 5%;
         border-color: black;
-        border-width: 0.50px;
-        width: 200;
+        border-width: 1.50px;
+        width: 300;
         height: auto;
 
 
