--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 
      .shape1{  
         background-color: #f2efef;
-        border-radius: 10%;
+        border-radius: 9px;
+        border: 1px solid #999;
         border-color: black;
-        border-width: 3px;
-        width: 300;
+        border-width: 9px;
+        max-width: 302px;
         height: auto;
 
 
