--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         border-radius: 9px;
         border: 1px solid #999;
         border-color: black;
-        border-width: 9px;
+        border-width: 4px;
         max-width: 302px;
         height: auto;
 
@@ -59,14 +59,22 @@
 
     @keyframes rot{
       10% {color: yellow; transform: rotate(36deg);}
+      14% {color: yellow; transform: rotate(46deg);}
       20% {color: orange; transform: rotate(72deg);}
+      25% {color: yellow; transform: rotate(82deg);}
       30% {color: red; transform: rotate(108deg);}
+      35% {color: yellow; transform: rotate(118deg);}
       40% {color:  green; transform: rotate(144deg);}
-      50% {color: lightgreen; transform: rotate(144deg);}
+      45% {color: yellow; transform: rotate(154deg);}
+      50% {color: lightgreen; transform: rotate(174deg);}
       60% {color: blue; transform: rotate(180deg);}
+      65% {color: yellow; transform: rotate(190deg);}
       70% {color: lightblue; transform: rotate(216deg);}
+      75% {color: lightblue; transform: rotate(226deg);}
       80% {color: purple; transform: rotate(252deg);}
+      85% {color: purple; transform: rotate(262deg);}
       90% {color: lightpink; transform: rotate(288deg);}
+      95% {color: lightpink; transform: rotate(298deg);}
       100% {color: lightyellow; transform: rotate(324deg);}
     }
 
