--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <body class="pinstripe">
   <center>
   
-  <p class="hide" id="hide" >Please use your ios 6 device</p>
+  <p class="hide" id="hide" >Please use your ios device</p>
 <div class="shape1">
-  <p class="text"><H1>IOS 6 Tools</H1></p>
+  <p class="text"><H1>IOS Tools</H1></p>
  
 </div>
 <a href="https://cydia.invoxiplaygames.uk/certificates/ISRG2.pem";><p class="button" id="button" >IOS 6 certificate</p></a>
@@ -23,7 +23,7 @@
         border-radius: 9px;
         border: 1px solid #999;
         border-color: black;
-        border-width: 4px;
+        border-width: 2px;
         max-width: 302px;
         height: auto;
 
@@ -75,7 +75,12 @@
       85% {color: purple; transform: rotate(262deg);}
       90% {color: lightpink; transform: rotate(288deg);}
       95% {color: lightpink; transform: rotate(298deg);}
-      100% {color: lightyellow; transform: rotate(324deg);}
+      96% {color: lightyellow; transform: rotate(324deg);}
+      97% {color: lightyellow; transform: rotate(334deg);}
+      98% {color: lightyellow; transform: rotate(344deg);}
+      99% {color: lightyellow; transform: rotate(354deg);}
+      100% {color: lightyellow; transform: rotate(360deg);}
+      
     }
 
 
